<resources>
    <string name="app_name">comishop</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="button2">Button</string>
    <string name="button3">Button</string>
    <string name="todo2">TODO</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="textview4">TextView</string>
    <string name="ver_historial">Ver historial</string>
    <string name="seleccione_productos">Seleccione Productos</string>
    <string name="salir">Salir</string>
    <string name="comenzar_vista">Comenzar Vista</string>
    <string name="todo4">TODO</string>
    <string name="name">Name</string>
    <string name="todo5">TODO</string>
    <string name="ingrese_correo">ingrese correo</string>
    <string name="ingrese_clave">ingrese clave</string>
</resources>