<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="353dp"
        android:layout_height="248dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="7dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/boton_ingreso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8">

        <EditText
            android:id="@+id/correo_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/ingrese_correo"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="vendedor@gmail.com"
            android:textColorHint="#4CAF50"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/pwd_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/ingrese_clave"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:text="vendedor123"
            android:textColorHint="#4CAF50" />
    </LinearLayout>

    <Button
        android:id="@+id/boton_ingreso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="137dp"
        android:backgroundTint="#0B0808"
        android:text="Ingresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="368dp"
        android:layout_height="216dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="380dp"
            android:layout_height="205dp"
            android:contentDescription="@string/todo5"
            app:srcCompat="@drawable/logo"
            tools:ignore="VisualLintBounds" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>